# vslzr

./: .gitignore  CLAUDE.md  README.md  hue_visualizer.spec  hue_visualizer_macos.spec  pyproject.toml
.claude/: settings.local.json
.claude/agents/: audio-reviewer.md
.github/workflows/: build-macos.yml  build-windows.yml
docs/: beat_detection_research_2026_03.md
frontend/: index.html
scripts/: analyze_track.py  build_windows.bat
src/hue_visualizer/: __main__.py  desktop.py
src/hue_visualizer/audio/: analyzer.py  beat_detector.py  capture.py  section_detector.py
src/hue_visualizer/bridge/: discovery.py
src/hue_visualizer/core/: config.py  exceptions.py  paths.py  persistence.py
src/hue_visualizer/server/: app.py
src/hue_visualizer/utils/: color_conversion.py
src/hue_visualizer/visualizer/: color_mapper.py  engine.py  presets.py
tests/: test_beat_detector.py  test_discovery.py  test_intensity_effects_groups.py  test_persistence.py  test_presets.py  test_section_detector.py
tools/: benchmark_beats.py
